--- a/fonts.css
+++ b/fonts.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?9o25tc');
-  src:  url('fonts/icomoon.eot?9o25tc#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?9o25tc') format('truetype'),
-    url('fonts/icomoon.woff?9o25tc') format('woff'),
-    url('fonts/icomoon.svg?9o25tc#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?r8gdzt');
+  src:  url('fonts/icomoon.eot?r8gdzt#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?r8gdzt') format('truetype'),
+    url('fonts/icomoon.woff?r8gdzt') format('woff'),
+    url('fonts/icomoon.svg?r8gdzt#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -54,9 +54,15 @@
 .icon-info_outline:before {
   content: "\e88f";
 }
+.icon-priority_high:before {
+  content: "\e645";
+}
 .icon-search:before {
   content: "\e8b6";
 }
 .icon-spellcheck:before {
   content: "\e8ce";
+}
+.icon-vertical_align_bottom:before {
+  content: "\e258";
 }
