--- a/index.css
+++ b/index.css
@@ -4,6 +4,9 @@ body{
     font-size: 14px;
     font-family: "Microsoft Yahei",Helvetica, Arial, Sans-Serif;
     overflow: hidden;
+    -webkit-touch-callout: none;
+    user-select: none;
+    cursor: default;
 }
 
 code{
@@ -42,9 +45,6 @@ input{
     height: 100%;
     width: 200px;
     background: #282c34;
-    cursor: default;
-    -webkit-touch-callout: none;
-    user-select: none;
     z-index: 100;
     box-shadow: 0 0px 15px #292929;
     padding-bottom: 41px;
@@ -150,11 +150,8 @@ input{
     text-align: center;
     width: 200px;
     height: 40px;
-    cursor: default;
     /* background: #21252b; */
     box-shadow: -5px 0px 10px #14181d;
-    -webkit-touch-callout: none;
-    user-select: none;
 }
 .page_tool > div{
     display: inline-block;
@@ -198,8 +195,6 @@ input{
     margin-left: -155px;
     box-shadow: 0 0 10px #1c1f25;
     overflow: hidden;
-    -webkit-touch-callout: none;
-    user-select: none;
 }
 .alert_title{
     font-size: 16px;
@@ -242,8 +237,6 @@ input{
     width: 32px;
     height: 18px;
     box-sizing: border-box;
-    outline: none;
-    -webkit-appearance:none;
     border-radius: 0;
     margin: 0;
 }
@@ -273,7 +266,7 @@ input{
     transform: translateX(14px);
 }
 
-.page_notice{
+.page_notice, .update_progress{
     position: absolute;
     right: 5px;
     bottom: 5px;
@@ -284,7 +277,7 @@ input{
     color: #fff;
     box-shadow: 0 0 10px #292929;
     transform: translateX(300px);
-    transition: transform .3s;
+    transition: transform .5s;
 }
 .page_notice.open{
     transform: translateX(0px);
@@ -294,8 +287,54 @@ input{
     vertical-align: middle;
 }
 .page_notice i{
-    font-size: 22px;
+    font-size: 24px;
     margin-right: 5px;
+}
+
+.update_progress{
+    transform: translateX(600px);
+    z-index: 50;
+    font-size: 12px;
+    padding: 10px;
+}
+.update_progress.open{
+    transform: translateX(0px);
+}
+.update_progress > div{
+    display: inline-block;
+    vertical-align: middle;
+}
+.update_progress > div i{
+    font-size: 24px;
+    margin-right: 5px;
+}
+.update_progress .progress_info{
+    line-height: 1;
+}
+.update_progress .progress_info > span:first-child{
+    margin-right: 35px;
+}
+.update_progress .progress_block{
+    width: 100%;
+    height: 3px;
+    background: #dedede;
+    margin-top: 10px;
+    overflow: hidden;
+    position: relative;
+}
+.update_progress .progress_block > div{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 0%;
+    height: 3px;
+    background: #6eb5de;
+}
+.update_progress .progress_install{
+    border: 1px #fff solid;
+    padding: 2px 10px;
+    border-radius: 2px;
+    margin-left: 10px;
 }
 
 
@@ -306,9 +345,6 @@ input{
     z-index: 200;
     width: 100%;
     height: 100%;
-    cursor: default;
-    -webkit-touch-callout: none;
-    user-select: none;
 }
 .key_maps_mask, .page_about_mask{
     position: absolute;
@@ -367,6 +403,9 @@ input{
 .page_about_info{
     text-align: center;
 }
+.page_about_info > div:last-child{
+    margin-bottom: 10px;
+}
 .page_about_name{
     margin: 15px 0;
 }
@@ -378,6 +417,14 @@ input{
     font-size: 13px;
     margin-left: 10px;
     color: #747d8e;
+}
+.about_other_info{
+    margin-bottom: 15px;
+}
+.about_other_info span{
+    display: inline-block;
+    margin-left: 16px;
+    line-height: 1.7;
 }
 
 /** scrollbar--start **/
