修复修改host时无权限时没提示的bug，增加releases地址链接

--- a/index.css
+++ b/index.css
@@ -412,6 +412,7 @@ input{
 .page_about_name span:first-child{
     font-size: 18px;
     margin-top: 15px;
+    text-decoration: underline;
 }
 .page_about_name span:last-child{
     font-size: 13px;
